mytalent/main/default/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Birthday_Disp__c</fullName>
        <formula>IF( 
ISBLANK(Brithday__c), 
&quot;&quot;, 
TEXT(YEAR(Brithday__c))+ &quot;/&quot; +TEXT(MONTH(Brithday__c))+ &quot;/&quot; +TEXT(DAY(Brithday__c)) 
+ &quot;（&quot; + TEXT(FLOOR((TODAY() - Brithday__c)/365.2425)) + &quot;歳）&quot; 
)</formula>
        <label>FML Birthday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brithday__c</fullName>
        <label>Brithday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Hiring__c</fullName>
        <label>Employee Hiring</label>
        <referenceTo>Employee_Hiring__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Name_Kana__c</fullName>
        <label>First Name Kana</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Disp__c</fullName>
        <formula>CASE(
  Gender__c , 
  &quot;Male&quot;, &quot;男性&quot;, 
  &quot;Female&quot;, &quot;女性&quot;, 
  &quot;&quot; 
)</formula>
        <label>FML Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Kana__c</fullName>
        <label>Last Name Kana</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_IMG__c</fullName>
        <formula>if(ISBLANK(Picture__c), &apos;&apos;, IMAGE(Picture__c, &quot;Picture&quot;))</formula>
        <label>FML Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rank_IMG__c</fullName>
        <formula>IMAGE( 
CASE(Rank__c , 
&quot;S&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTk&quot;, 
&quot;A&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTu&quot;, 
&quot;B&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTz&quot;, 
&quot;C&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbU4&quot;, 
&quot;D&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUE&quot;, 
&quot;E&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUJ&quot;, 
&quot;F&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUO&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rank&quot;, 70, 70)</formula>
        <label>FML Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Ref__c</fullName>
        <formula>CASE(Rank__c , 
&quot;S&quot;, &quot;0157F000000lbTk&quot;, 
&quot;A&quot;, &quot;0157F000000lbTu&quot;, 
&quot;B&quot;, &quot;0157F000000lbTz&quot;, 
&quot;C&quot;, &quot;0157F000000lbU4&quot;, 
&quot;D&quot;, &quot;0157F000000lbUE&quot;, 
&quot;E&quot;, &quot;0157F000000lbUJ&quot;, 
&quot;F&quot;, &quot;0157F000000lbUO&quot;,
&quot;&quot;
)</formula>
        <label>FML Rank Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Disp__c</fullName>
        <formula>IMAGE( 
  CASE(Rating__c, 
    5, &quot;/img/samples/stars_500.gif&quot;, 
    4, &quot;/img/samples/stars_400.gif&quot;, 
    3, &quot;/img/samples/stars_300.gif&quot;, 
    2, &quot;/img/samples/stars_200.gif&quot;,
    1, &quot;/img/samples/stars_100.gif&quot;,
    &quot;/img/samples/stars_000.gif&quot;
  ), &quot;Unknown&quot;
)</formula>
        <label>FML Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Achievement__c</fullName>
        <label>Recent Achievement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thumbnail_IMG__c</fullName>
        <formula>if(ISBLANK(Thumbnail__c), &quot;&quot;, IMAGE(Thumbnail__c, &quot;Picture&quot;, 200, -1))</formula>
        <label>FML Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Thumbnail_IMG__c</columns>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>